# maple

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  og-image.html  package.json  tinybird.json  turbo.json
.context/attachments/: PR instructions.md
.context/plans/: convert-query-builder-from-drawer-to-full-page.md
.github/workflows/: deploy-pr-preview.yml  deploy-prd.yml  deploy-stg.yml  tinybird-cd.yml  tinybird-ci.yml
apps/api/: .env.example  @useautumn-sdk.d.ts  Dockerfile  autumn.config.ts  package.json  tsconfig.json
apps/api/src/: http.ts  index.ts
apps/api/src/autumn/: sync-usage.ts
apps/api/src/lib/: spam-patterns.ts  tenant-context.ts
apps/api/src/mcp/: app.ts  server.ts
apps/api/src/routes/: auth.http.ts  autumn.http.ts  dashboards.http.ts  ingest-keys.http.ts  query-engine.http.ts  tinybird.http.ts
apps/ingest/: Cargo.toml  Dockerfile  package.json  railway.json
apps/ingest/src/: autumn.rs  main.rs
apps/landing/: alchemy.run.ts  package.json  wrangler.jsonc
apps/landing/public/: manifest.json
apps/web/: Dockerfile  alchemy.run.ts  components.json  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/web/scripts/: query-builder-live-smoke.ts
apps/web/src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css  worker.ts
docs/: PLAN-shiv-local-ingest-fix.md  persistence.md  railway-deploy.md
otel/: Dockerfile  collector-config.yaml  railway.json
scripts/: backfill-ingest-key-hashes.ts  deploy-stack.ts  tinybird-deploy-destructive.ts
(+358 files in other folders)
