[package]
name = "maple-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tikv-jemallocator = "0.6"
base64 = "0.22.1"
flate2 = "1.1.5"
hmac = "0.12.1"
libsql = "0.9.29"
dotenvy = "0.15.7"
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic-messages", "trace", "logs", "metrics", "with-serde"] }
prost = "0.14.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "http2", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5.7"
uuid = { version = "1", features = ["v4"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
